application/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-serv
  labels:
    app: rest-serv
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    service-pod: service-rest-pod
