application/client/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: rest-service-ingress
spec:
  rules:
    - host: diegopuzza.com
      http:
        paths:
          - backend:
              serviceName: rest-serv
              servicePort: 3000
            path: /api
  tls:
    - hosts:
      - diegopuzza.com
      secretName: cert-secret
